Narrow Google search page to avoid scrollbar.

--- a/userstyles/modify-font.user.css
+++ b/userstyles/modify-font.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name modify-font
 @namespace vicchow
-@version 41.0.2
+@version 41.0.3
 ==/UserStyle== */
 
 /*
@@ -129,7 +129,7 @@
   @media screen and (min-width: 1024px) {
     .CvDJxb,
     .main {
-      min-width: 1024px;
+      min-width: 1010px;
     }
   }
 }
